# xts_device_attest

./: README.en.md  README.md  README_zh.md  bundle.json
common/: devattest_errno.h
common/log/: devattest_log.h
common/permission/: BUILD.gn
common/permission/include/: devattest_permission.h  permission.h
common/permission/src/: devattest_permission.cpp  permission.cpp
interfaces/innerkits/native_cpp/: BUILD.gn  libdevattest_sdk.map
interfaces/innerkits/native_cpp/include/: attest_result_info.h  devattest_client.h  devattest_interface.h  devattest_profile_load_callback.h  devattest_service_proxy.h
interfaces/innerkits/native_cpp/src/: devattest_client.cpp  devattest_profile_load_callback.cpp  devattest_service_proxy.cpp
interfaces/innerkits/native_cpp/test/unittest/: BUILD.gn
interfaces/innerkits/native_cpp/test/unittest/include/: devattest_client_test.h  devattest_test.h
interfaces/innerkits/native_cpp/test/unittest/src/: devattest_client_proxy_test.cpp  devattest_client_test.cpp  devattest_test.cpp
interfaces/kits/js/: @ohos.deviceAttest.d.ts
interfaces/kits/napi/: BUILD.gn
interfaces/kits/napi/include/: devattest_napi.h  devattest_napi_error.h
interfaces/kits/napi/src/: devattest_napi.cpp  devattest_napi_error.cpp
sample/client/: BUILD.gn  devattest_main_client.cpp
services/core/: BUILD.gn  attest_entry.c  attest_entry.h  attestsource.gni  libdevattest_core.map  network_config.json
services/core/adapter/: attest_adapter.c  attest_adapter_hal.c  attest_adapter_mock.c  attest_adapter_oem.c  attest_adapter_os.c
services/core/attest/: attest_service.c  attest_service_active.c  attest_service_auth.c  attest_service_challenge.c  attest_service_device.c  attest_service_reset.c
services/core/dfx/: attest_dfx.c
services/core/include/: attest_error.h  attest_type.h
services/core/include/adapter/: attest_adapter.h  attest_adapter_mock.h  attest_adapter_oem.h
services/core/include/attest/: attest_service.h  attest_service_active.h  attest_service_auth.h  attest_service_device.h  attest_service_reset.h
services/core/include/network/: attest_network.h
services/core/include/security/: attest_security.h  attest_security_token.h
services/core/include/utils/: attest_utils.h  attest_utils_file.h  attest_utils_json.h  attest_utils_log.h  attest_utils_timer.h
services/core/network/: attest_network.c
services/core/security/: attest_security.c  attest_security_ticket.c  attest_security_token.c
services/core/utils/: attest_utils.c  attest_utils_file.c  attest_utils_json.c  attest_utils_log.c  attest_utils_memleak.c  attest_utils_timer.c
services/devattest_ability/: BUILD.gn  libdevattest_service.map
services/devattest_ability/include/: attest_result_info.h  devattest_network_callback.h  devattest_network_manager.h  devattest_notification_publish.h  devattest_service.h  devattest_service_stub.h  devattest_system_ability_listener.h  devattest_task.h
services/devattest_ability/src/: attest_result_info.cpp  devattest_network_callback.cpp  devattest_network_manager.cpp  devattest_notification_publish.cpp  devattest_service.cpp  devattest_service_stub.cpp  devattest_system_ability_listener.cpp  devattest_task.cpp
services/devattest_ability/test/tdd/gtest/: BUILD.gn  attest_tdd_data_transfer.c  attest_tdd_mock_hal.c  attest_tdd_mock_property.c  attest_tdd_test.cpp
services/devattest_ability/test/tdd/gtest/include/: attest_tdd_data_transfer.h  attest_tdd_mock_hal.h  attest_tdd_mock_property.h  attest_tdd_test.h
services/devattest_ability/test/tdd/gtest/src/: attest_tdd_data_transfer.c  attest_tdd_mock_hal.c  attest_tdd_mock_property.c  attest_tdd_test.cpp
services/devattest_ability/test/unittest/: BUILD.gn
services/devattest_ability/test/unittest/include/: devattest_service_test.h
services/devattest_ability/test/unittest/src/: devattest_service_test.cpp
services/etc/init/: BUILD.gn  devattest_service.cfg  devattest_service.rc
services/oem_adapter/: BUILD.gn  libdevattest_oem.map
services/oem_adapter/include/: device_attest_oem_adapter.h  device_attest_oem_file.h
services/oem_adapter/src/: device_attest_oem_adapter.c  device_attest_oem_file.c
services/sa_profile/: 5501.xml  7100.xml  BUILD.gn  devattest_service.json
test/data/: DevAttestCoreTest
test/fuzztest/: BUILD.gn
test/fuzztest/devattest_fuzzer/: BUILD.gn  devattest_fuzzer.cpp  devattest_fuzzer.h
test/fuzztest/devattestadapteroem_fuzzer/: BUILD.gn  devattestadapteroem_fuzzer.cpp  devattestadapteroem_fuzzer.h
test/fuzztest/devattestclient_fuzzer/: BUILD.gn  devattestclient_fuzzer.cpp  devattestclient_fuzzer.h
test/fuzztest/devattestcorenetwork_fuzzer/: BUILD.gn  devattest_core_network_fuzz.c  devattest_core_network_fuzz.h  devattestcorenetwork_fuzzer.cpp  devattestcorenetwork_fuzzer.h
test/fuzztest/devattestnetworkcallback_fuzzer/: BUILD.gn  devattestnetworkcallback_fuzzer.cpp  devattestnetworkcallback_fuzzer.h  project.xml
test/fuzztest/devattestservice_fuzzer/: BUILD.gn  devattestservice_fuzzer.cpp  devattestservice_fuzzer.h
test/fuzztest/devattestservicestub_fuzzer/: BUILD.gn  devattestservicestub_fuzzer.cpp  devattestservicestub_fuzzer.h
test/performancetest/: BUILD.gn
test/performancetest/include/: devattestclient_performance_test.h  devattestservice_performance_test.h
test/performancetest/src/: devattestclient_performance_test.cpp  devattestservice_performance_test.cpp
test/unittest/: BUILD.gn
test/unittest/src/: DevAttestCoreDeviceTest.cpp  DevAttestCoreMemTest.cpp  DevAttestCoreServiceTest.cpp  DevAttestSdkTest.cpp
