# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# import("//build/config/features.gni")
import("//build/test.gni")
import("//test/xts/device_attest/build/devattestconfig.gni")

##############################test_devattestclient_performance####################################
ohos_unittest("test_devattestclient_performance") {
  module_out_path = "device_attest/device_attest"

  include_dirs = [
    "include",
    "${devattest_path}/common",
    "${devattest_path}/common/log",
    "${devattest_innerkit_path}/native_cpp/include",
    "//third_party/googletest/include",
  ]

  sources = [ "src/devattestclient_performance_test.cpp" ]

  deps = [
    "${devattest_path}/interfaces/innerkits/native_cpp:devattest_sdk",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "xts"
  part_name = "device_attest"
}

##############################test_devattestservice_performance####################################
ohos_unittest("test_devattestservice_performance") {
  module_out_path = "device_attest/device_attest"

  include_dirs = [
    "include",
    "${devattest_path}/services/core",
    "${devattest_path}/common",
    "${devattest_path}/common/log",
    "${devattest_path}/common/permission/include",
    "${devattest_innerkit_path}/native_cpp/include",
    "${devattest_path}/services/devattest_ability/include",
    "//third_party/googletest/include",
  ]

  sources = [
    "${devattest_path}/common/permission/src/permission.cpp",
    "${devattest_path}/services/devattest_ability/src/attest_result_info.cpp",
    "${devattest_path}/services/devattest_ability/src/devattest_network_callback.cpp",
    "${devattest_path}/services/devattest_ability/src/devattest_network_manager.cpp",
    "${devattest_path}/services/devattest_ability/src/devattest_service.cpp",
    "${devattest_path}/services/devattest_ability/src/devattest_service_stub.cpp",
    "${devattest_path}/services/devattest_ability/src/devattest_system_ability_listener.cpp",
    "${devattest_path}/services/devattest_ability/src/devattest_task.cpp",
    "src/devattestservice_performance_test.cpp",
  ]

  deps = [
    "${devattest_path}/services/core:devattest_core",
    "//third_party/googletest:gtest_main",
  ]

  # service
  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  # for permission
  external_deps += [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
  ]

  # for network callback
  external_deps += [ "netmanager_base:net_conn_manager_if" ]

  subsystem_name = "xts"
  part_name = "device_attest"
}

group("performance") {
  testonly = true
  deps = [
    ":test_devattestclient_performance",
    ":test_devattestservice_performance",
  ]
}
