# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//test/xts/device_attest/build/devattestconfig.gni")

config("devattest_sdk_private_config") {
  include_dirs = [
    "${devattest_path}/common",
    "${devattest_path}/common/log",
  ]
}

config("devattest_sdk_public_config") {
  include_dirs = [ "${devattest_innerkit_path}/native_cpp/include" ]
}

ohos_shared_library("devattest_sdk") {
  version_script = "libdevattest_sdk.map"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  branch_protector_ret = "pac_ret"

  sources = [
    "${devattest_path}/services/devattest_ability/src/attest_result_info.cpp",
    "src/devattest_client.cpp",
    "src/devattest_profile_load_callback.cpp",
    "src/devattest_service_proxy.cpp",
  ]

  configs = [ ":devattest_sdk_private_config" ]

  public_configs = [ ":devattest_sdk_public_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "xts"
  innerapi_tags = [ "platformsdk" ]
  part_name = "device_attest"
}
