# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//test/xts/device_attest/build/devattestconfig.gni")

config("devattest_kit_config") {
  include_dirs = [
    "include",
    "${devattest_path}/common",
    "${devattest_path}/common/log",
    "${devattest_path}/interfaces/innerkits/native_cpp/include",
    "${devattest_path}/services/devattest_ability/include",
    "//third_party/node/src",
  ]
}

ohos_shared_library("deviceattest") {
  include_dirs = []
  configs = [ ":devattest_kit_config" ]
  public_configs = [ ":devattest_kit_config" ]
  sources = [
    "src/devattest_napi.cpp",
    "src/devattest_napi_error.cpp",
  ]
  deps = [
    "${devattest_path}/interfaces/innerkits/native_cpp:devattest_sdk",
    "//third_party/libuv:uv",
  ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "napi:ace_napi",
    "samgr:samgr_proxy",
  ]

  relative_install_dir = "module"
  subsystem_name = "xts"
  part_name = "device_attest"
}
