# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//test/xts/device_attest/build/devattestconfig.gni")

group("devattest_etc") {
  deps = [ ":devattest_service.cfg" ]
}

ohos_prebuilt_etc("devattest_service.cfg") {
  source = "devattest_service.cfg"
  relative_install_dir = "init"
  subsystem_name = "xts"
  part_name = "device_attest"
}
