# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//test/xts/device_attest/build/devattestconfig.gni")

##############################fuzztest##########################################
ohos_fuzztest("DevattestAdapterOemFuzzTest") {
  module_out_path = devattest_fuzz_module_path

  fuzz_config_file = "."

  include_dirs = [
    "${devattest_path}/services/core/include",
    "${devattest_path}/services/core/include/adapter",
    "${devattest_path}/services/core/include/utils",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "${devattest_path}/services/core/adapter/attest_adapter_oem.c",
    "${devattest_path}/services/core/utils/attest_utils.c",
    "${devattest_path}/services/core/utils/attest_utils_file.c",
    "${devattest_path}/services/core/utils/attest_utils_list.c",
    "${devattest_path}/services/core/utils/attest_utils_log.c",
    "${devattest_path}/services/core/utils/attest_utils_memleak.c",
    "./devattestadapteroem_fuzzer.cpp",
  ]

  defines = [ "ATTEST_HILOG_LEVEL = 1" ]

  deps = [
    "//third_party/mbedtls:mbedtls_shared",
    "//third_party/openssl:libcrypto_shared",
    "//third_party/openssl:libssl_shared",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}
