# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//test/xts/device_attest/build/devattestconfig.gni")

module_output_path = "devattest/devattest_ability"

##############################fuzztest##########################################
ohos_fuzztest("DevattestCoreNetworkFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file = "."

  include_dirs = [
    ".",
    "${devattest_path}/services/core/include",
    "${devattest_path}/services/core/include/adapter",
    "${devattest_path}/services/core/include/attest",
    "${devattest_path}/services/core/include/dfx",
    "${devattest_path}/services/core/include/security",
    "${devattest_path}/services/core/include/network",
    "${devattest_path}/services/core/include/utils",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "devattest_core_network_fuzz.c",
    "devattestcorenetwork_fuzzer.cpp",
  ]

  deps = [ "${devattest_path}/services/core:devattest_core" ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_core",
  ]
}
