# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//test/xts/device_attest/build/devattestconfig.gni")

##############################test_devattestservice##########################################
ohos_unittest("test_devattestservice") {
  module_out_path = devattest_unittest_module_path
  include_dirs = [
    "include",
    "${devattest_path}/common",
    "${devattest_path}/common/log",
    "${devattest_innerkit_path}/native_cpp/include",
    "${devattest_path}/services/devattest_ability/include",
  ]

  sources = [ "src/devattest_service_test.cpp" ]

  deps = [
    "${devattest_path}/services/devattest_ability:devattest_service",
  ]

  external_deps = [
    "c_utils:utils",
    "bounds_checking_function:libsec_shared",
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "googletest:gtest_main",
  ]

  subsystem_name = "xts"
  part_name = "device_attest"
}
