# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//test/xts/device_attest/build/devattestconfig.gni")

##############################test_devattestclient##########################################
ohos_unittest("test_devattestclient") {
  module_out_path = "devattest/innerkits"
  include_dirs = [
    "include",
    "${devattest_path}/common",
    "${devattest_path}/common/log",
    "${devattest_innerkit_path}/native_cpp/include",
    "//third_party/googletest/include",
  ]

  sources = [
    "src/devattest_client_test.cpp",
    "src/devattest_test.cpp",
  ]

  deps = [
    "${devattest_path}/interfaces/innerkits/native_cpp:devattest_sdk",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "xts"
  part_name = "device_attest"
}

##############################test_devattestclient_proxy##########################################
ohos_unittest("test_devattestclient_proxy") {
  module_out_path = "devattest/innerkits"
  include_dirs = [
    "include",
    "${devattest_path}/common",
    "${devattest_path}/common/log",
    "${devattest_innerkit_path}/native_cpp/include",
    "//third_party/googletest/include",
  ]

  sources = [
    "src/devattest_client_proxy_test.cpp",
    "src/devattest_test.cpp",
  ]

  deps = [
    "${devattest_path}/interfaces/innerkits/native_cpp:devattest_sdk",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  subsystem_name = "xts"
  part_name = "device_attest"
}
